--- a/app/src/main/res/layout/activity_marker_management.xml
+++ b/app/src/main/res/layout/activity_marker_management.xml
@@ -66,6 +66,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginEnd="20dp"
                         android:layout_marginTop="25dp"
+                        android:inputType="number"
                         android:layout_toStartOf="@id/cb_marker_delete_management"
                         android:background="@drawable/ripple_add_marker" />
 
