--- a/app/src/main/res/layout/list_student_withbutton.xml
+++ b/app/src/main/res/layout/list_student_withbutton.xml
@@ -10,9 +10,9 @@
         <TextView
             android:id="@+id/textView_group_studentswithButton"
             android:layout_width="80dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:gravity="left"
-            android:layout_weight="1"
+            android:layout_weight="4"
             android:text="Group No."
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -28,12 +28,11 @@
         <TextView
             android:id="@+id/textView_studentID_studentsWithButton"
             android:layout_width="100dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:clickable="false"
             android:gravity="left"
             android:padding="5dp"
-            android:layout_weight="6"
-            android:singleLine="true"
+            android:layout_weight="4"
             android:text="Student ID"
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -48,12 +47,11 @@
         <TextView
                 android:id="@+id/textView_fullname_studentsWithButton"
                 android:layout_width="200dp"
-                android:layout_height="35dp"
+                android:layout_height="wrap_content"
                 android:clickable="false"
                 android:layout_weight="12"
                 android:text="Student Name"
                 android:textSize="18sp"
-                android:singleLine="true"
                 android:textColor="@color/black"
                 android:gravity="left"
                 android:padding="5dp"
@@ -67,13 +65,12 @@
 
         <TextView
             android:id="@+id/textView_email_studentsWithButton"
-            android:layout_width="200dp"
-            android:layout_height="35dp"
+            android:layout_width="260dp"
+            android:layout_height="wrap_content"
             android:clickable="false"
             android:gravity="left"
-            android:layout_weight="20"
+            android:layout_weight="12"
             android:padding="5dp"
-            android:singleLine="true"
             android:text="Email"
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -87,12 +84,13 @@
         <Button
             android:id="@+id/button_start_studentsWithButton"
             android:layout_width="wrap_content"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:text="start"
             android:textStyle="bold"
             android:textSize="18sp"
             android:textColor="@color/white"
             android:layout_marginRight="16dp"
+            android:layout_gravity="center"
             android:paddingRight="16dp"
             android:paddingLeft="16dp"
             android:layout_marginLeft="8dp"
