--- a/app/src/main/res/layout/dialog_markers.xml
+++ b/app/src/main/res/layout/dialog_markers.xml
@@ -24,6 +24,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:text="Invitation"
+                    android:inputType="number"
                     android:textSize="30sp"
                     android:textStyle="bold"
                     android:paddingTop="10dp"
